@@ -1,5 +1,7 @@
 
 5.2a2 -> 5.2a3:
+    - proyvind: debugedit: perform some cleanups and pull in some from rpm.org
+	as well while at it.
     - proyvind: move comparision of DISTEPOCH under NOTYET &
 	RPM_VENDOR_MANDRIVA for now.
     - proyvind: only do DISTEPOCH comparision if RELEASE is equal.
